# tree-sitter-direnv

./: .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json  shell.nix  tree-sitter.json
bindings/c/: tree-sitter-direnv.h  tree-sitter-direnv.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tree_sitter_direnv/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm  injections.scm  locals.scm
src/: grammar.json  node-types.json
test/corpus/: basic.txt  direnv_commands.txt  variable_assignment.txt  variables_extended.txt
