[package]
name = "tree-sitter-direnv"
description = "Direnv grammar for the tree-sitter parsing library"
version = "1.0.0"
keywords = ["incremental", "parsing", "nix"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/NotAShelf/tree-sitter-direnv"
edition = "2021"
license = "MPL-2.0"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.5"

[dev-dependencies]
tree-sitter = "0.25"

[build-dependencies]
cc = "1.2"
